--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
+{% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
     <h1>Register</h1>
-    <form action="" method="post">
+    {{ wtf.quick_form(form) }}
+{% endblock %}
+
+
+<!--
+<form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
@@ -34,4 +40,4 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-{% endblock %}
+-->
